# CRO

./: .gitignore  CMakeLists.txt  README.md  cro_env.yml  main.cc
doxygen/: README.md  cro.conf
include/: ChannelMap.h  CroSig.h  DqProcessBar.h  RoEvent.h  RoEventLinkDef.h  argparse.h
include/DqAnalysis/: DqEvent.h  DqPeaks.h
include/DqROOT/: DqTGE.hpp  MyRoot.hpp
include/OmaReader/: ChannelMap.h  DaqCommon.h  DaqEvent.h  EventDecoder.h  HuffmanDecompressor.h  LogMsg.h  tde_cmap_utils.h
jump/archive/: 13-05-21_MUX_doCode.ipynb  13-05-21_r601-MUX-neg.ipynb  13-05-21_r601-MUX-pos.ipynb  13-05-21_r602-MUX-neg.ipynb  13-05-21_r602-MUX-pos.ipynb  17-05-21_r601-profiles.ipynb  21-05-21_r601-filtering.ipynb  21-05-21_r602-filtering.ipynb  29-04-21_calib.ipynb  MUX_1170.ipynb  cms_s-curve_one_mg_axis_1711.ipynb  ev2plot.ipynb  pik2dump.ipynb  ro2PedProf.ipynb  ro2Pick_v2.ipynb  ro2pik.ipynb  sig2ProfSumHeight-rel.ipynb  sig2ProfSumHeight.ipynb  sig2Tex.ipynb  sig2overview-rel.ipynb  sig2overview_1361-1398.ipynb  sig2overview_sim.ipynb  sig2overview_tets.ipynb
jump/archive/.ipynb_checkpoints/: 21-05-21_r602-filtering-checkpoint.ipynb  ped2overview-checkpoint.ipynb  sig2overview_sim-checkpoint.ipynb
jump/includes/: CroFunction.py  CroSignal.py
jump/jumping/: ColdBox_MAP.ipynb  pik2dump.ipynb  ro2pik.ipynb  sig2overview_1429-1434.ipynb  sig2overview_1530.ipynb
jump/jumping/.ipynb_checkpoints/: 13-05-21_MUX_doCode-checkpoint.ipynb  13-05-21_r601-MUX-neg-checkpoint.ipynb  13-05-21_r601-MUX-pos-checkpoint.ipynb  13-05-21_r602-MUX-neg-checkpoint.ipynb  13-05-21_r602-MUX-pos-checkpoint.ipynb  17-05-21_r601-profiles-checkpoint.ipynb  21-05-21_r601-filtering-checkpoint.ipynb  29-04-21_calib-checkpoint.ipynb  29-04-21_iRPC_TOF-checkpoint.ipynb  ColdBox_MAP-checkpoint.ipynb  ev2plot-checkpoint.ipynb  pik2dump-checkpoint.ipynb  ro2pik-checkpoint.ipynb  sig2overview-checkpoint.ipynb  sig2overview_1429-1434-checkpoint.ipynb  sig2overview_1530-checkpoint.ipynb
jump/package/: jusig.py  lycro.py  lycro_0v1.py
jump/scripts/: ro2pik.py
jump/style/CMS/: CMS_lumi.C  CMS_lumi.h  tdrstyle.C
jump/style/DUNE/: DUNE_lumi.C  DUNE_lumi.h
script/: dump.py
script/ev/: main.cc
script/sig/: main.cc
src/: ChannelMap.cc  EventDecoder.cc  RoEvent.cc
src/DqFeatures/: DqProcessBar.cc
src/DqROOT/: DqTGE.cpp
src/OmaReader/: ChannelMap.cc  HuffmanDecompressor.cc
units/: cbv1.cc  ped.cc  ready.cc
